force-app/main/default/objects/DropBox_Access__c/DropBox_Access__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <label>DropBox Access</label>
</CustomObject>