force-app/main/default/objects/DropBox_Access__c/fields/Create_Shared_Link_Endpoint__c.field-meta.xml
<CustomField>
    <fullName>Create_Shared_Link_Endpoint__c</fullName>
    <label>Create Shared Link Endpoint</label>
    <length>255</length>
    <type>Text</type>
</CustomField>