force-app/main/default/objects/DropBox_Access__c/fields/Dropbox_Account_Endpoint__c.field-meta.xml
<CustomField>
    <fullName>Dropbox_Account_Endpoint__c</fullName>
    <label>Dropbox Account Endpoint</label>
    <length>255</length>
    <type>Text</type>
</CustomField>