force-app/main/default/objects/DropBox_Access__c/fields/Dropbox_OAuth_token__c.field-meta.xml
<CustomField>
    <fullName>Dropbox_OAuth_token__c</fullName>
    <label>Dropbox OAuth token</label>
    <length>255</length>
    <type>Text</type>
</CustomField>