force-app/main/default/objects/DropBox_Access__c/fields/Get_Current_Account__c.field-meta.xml
<CustomField>
    <fullName>Get_Current_Account__c</fullName>
    <label>Get Current Account</label>
    <length>255</length>
    <type>Text</type>
</CustomField>