force-app/main/default/objects/DropBox_Access__c/fields/Get_Metadata_Endpoint__c.field-meta.xml
<CustomField>
    <fullName>Get_Metadata_Endpoint__c</fullName>
    <label>Get Metadata Endpoint</label>
    <length>255</length>
    <type>Text</type>
</CustomField>