force-app/main/default/objects/DropBox_Access__c/fields/Logo_Path__c.field-meta.xml
<CustomField>
    <fullName>Logo_Path__c</fullName>
    <label>Logo Path</label>
    <length>255</length>
    <type>Text</type>
</CustomField>