force-app/main/default/objects/DropBox_Access__c/fields/Product_Photo_Path__c.field-meta.xml
<CustomField>
    <fullName>Product_Photo_Path__c</fullName>
    <label>Product Photo Path</label>
    <length>255</length>
    <type>Text</type>
</CustomField>