force-app/main/default/objects/DropBox_Access__c/fields/Upload_Session_Endpoint__c.field-meta.xml
<CustomField>
    <fullName>Upload_Session_Endpoint__c</fullName>
    <label>Upload Session Endpoint</label>
    <length>255</length>
    <type>Text</type>
</CustomField>